--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^4.0.3
   flutter_screenutil: ^5.6.1
   loading_animation_widget: ^1.2.0+4
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
