--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_screenutil: ^5.6.1
   loading_animation_widget: ^1.2.0+4
   cached_network_image: ^3.2.3
+  lottie: ^2.3.1
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
